hover fixed and desktop nav added

--- a/lacy-matt/index.html
+++ b/lacy-matt/index.html
@@ -30,22 +30,23 @@
     <!-- https://css-tricks.com/snippets/css/clear-fix/ -->
     <!-- PUT YOUR RESPONSE HERE: It is use to clear a property assigned to all the children under a parent element. -->
 
+    <!-- <li><a href="#" class="icon-menu"></a></li> -->
     <section class="heading-group-h1">
-      <li><a href="#" class="icon-menu"></a></li>
       <h1>
         Kilovolt Blog!
       </h1>
       <h2>The shocking power of static pages</h2>
+      <nav class="main-nav">
+        <!-- DONE: Add a hamburger menu icon here, which will show/hide depending on screen width (desktop vs. mobile). -->
+        <div class="icon-menu"></div>
+        <ul>
+          <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
+          <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
+          <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
+          <li><a href="http://github.com/brookr" target="_blank" class="icon-github"> GitHub</a></li>
+        </ul>
+      </nav>
     </section>
-    <nav class="main-nav">
-      <!-- DONE: Add a hamburger menu icon here, which will show/hide depending on screen width (desktop vs. mobile). -->
-      <ul>
-        <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
-        <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
-        <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
-        <li><a href="http://github.com/brookr" target="_blank" class="icon-github"> GitHub</a></li>
-      </ul>
-    </nav>
   </header>
   <main>
     <section id="articles" class="tab-content">
