--- a/lacy-matt/index.html
+++ b/lacy-matt/index.html
@@ -31,7 +31,6 @@
     <!-- PUT YOUR RESPONSE HERE: It is use to clear a property assigned to all the children under a parent element. -->
 
     <section class="heading-group-h1">
-      <li><a href="#" class="icon-menu"></a></li>
       <h1>
         Kilovolt Blog!
       </h1>
@@ -39,11 +38,12 @@
     </section>
     <nav class="main-nav">
       <!-- DONE: Add a hamburger menu icon here, which will show/hide depending on screen width (desktop vs. mobile). -->
+      <div class="icon-menu"></div>
       <ul>
         <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
         <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
-        <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
-        <li><a href="http://github.com/brookr" target="_blank" class="icon-github"> GitHub</a></li>
+        <li class="tab"><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
+        <li class="tab"><a href="http://github.com/brookr" target="_blank" class="icon-github"> GitHub</a></li>
       </ul>
     </nav>
   </header>
